# Vr.Extended.Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/aind_vr_foraging_analysis/data_io/: __init__.py
src/aind_vr_foraging_analysis/utils/: __init__.py  breathing_signal.py  processing.py
src/aind_vr_foraging_analysis/utils/parsing/: __init__.py  data_access.py  parse.py  supplementary_parsing.py  test_new_fetch.ipynb
src/aind_vr_foraging_analysis/utils/plotting/: __init__.py  general_plotting_utils.py  plotting_friction_experiment.py
